# anki-drag-and-drop

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  renovate_release.yml
scripts/: create-package.py  helpers.py  sync-database.py
template/: back.html  front.html  style.css
